--- a/styles.css
+++ b/styles.css
@@ -300,3 +300,10 @@ input[type="checkbox"] {
     cursor: pointer;
     accent-color: #60a5fa;
 }
+
+.ebook-text-content.flow-mode {
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+}
